--- a/Index-peter.html
+++ b/Index-peter.html
@@ -119,32 +119,40 @@
     </section>
 
 <!-- Villains Section -->
-    <section id="villains-section">
-        <h1 class="section-title">Villains</h1>
-        <div class="container villains-container">
-            <div class="image-box">
-                <img src="image/v3.jpg" alt="Electro">
-            </div>
-            <div class="image-box">
-                <img src="image/v1.jpg" alt="Doctor Octopus">
-            </div>
-            <div class="image-box">
-                <img src="image/v2.jpg" alt="Green Goblin">
-            </div>
-            <div class="image-box">
-                <img src="image/v7.jpg" alt="Vulture">
-            </div>
-            <div class="image-box">
-                <img src="image/v5.jpg" alt="The Lizard">
-            </div>
-            <div class="image-box">
-                <img src="image/v8.jpg" alt="Sandman">
-            </div>
-            <div class="image-box">
-                <img src="image/v6.jpg" alt="The Rhino">
-            </div>
+<section id="villains-section">
+    <h1 class="section-title">Villains</h1>
+    <div class="container villains-container">
+        <div class="image-box">
+            <img src="image/v3.jpg" alt="Electro">
+            <div class="popup-text">Electro</div>
         </div>
-    </section>
+        <div class="image-box">
+            <img src="image/v1.jpg" alt="Doctor Octopus">
+            <div class="popup-text">Doctor Octopus</div>
+        </div>
+        <div class="image-box">
+            <img src="image/v2.jpg" alt="Green Goblin">
+            <div class="popup-text">Green Goblin</div>
+        </div>
+        <div class="image-box">
+            <img src="image/v7.jpg" alt="Vulture">
+            <div class="popup-text">Vulture</div>
+        </div>
+        <div class="image-box">
+            <img src="image/v5.jpg" alt="The Lizard">
+            <div class="popup-text">The Lizard</div>
+        </div>
+        <div class="image-box">
+            <img src="image/v8.jpg" alt="Sandman">
+            <div class="popup-text">Sandman</div>
+        </div>
+        <div class="image-box">
+            <img src="image/v6.jpg" alt="The Rhino">
+            <div class="popup-text">The Rhino</div>
+        </div>
+    </div>
+</section>
+
 
 <!-- Gallery Section -->
 
@@ -253,7 +261,6 @@
       setTimeout(showSlides, 2000); 
     }
     </script>
-
 
 
 </body>
