--- a/Index-peter.html
+++ b/Index-peter.html
@@ -9,10 +9,14 @@
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
 <body>
+
     <header>
         <div class="logo">
             <img src="image/marvel.png" alt="Logo" />
         </div>
+        <input type="checkbox" id="nav-toggle" class="nav-toggle">
+        <label for="nav-toggle" class="nav">&#9776;</label>
+    
         <ul class="nav-links">
             <li><a href="#home">Home</a></li>
             <li><a href="#about">About</a></li>
